Addition of Salesforce stuff

--- a/index.html
+++ b/index.html
@@ -55,10 +55,13 @@
 										I have created applications and enhancements in Salesforce. Here are some examples:
 
 										<ul>
-											<li>A Lightning Web Component that can search for addresses</li>
+											<li>Lightning Web Components that enhance the UX and provide additional order functionality</li>
 											<li>Screen flows and an auto-launched flow that handles the Salesforce onboarding process</li>
 											<li>Validation rules that enhance customer data integrity</li>
 											<li>Unit tests that validate functionality and facilitate customer delivery</li>
+											<li>Apex refactoring to align the codebase with object-oriented principles for efficiency and readability</li>
+											<li>Data changes using the Salesforce migration toolset, including Data Loader and Workbench</li>
+											<li>Adding capabilities to objects and page layouts using bulkified batchable and schedulable classes</li>
 										</ul>
 									</p>
 									<div class="row">
@@ -87,6 +90,11 @@
 											<div class="col-12">
 												<p>
 													My name is Isaac Hussain. I am a software engineer who is passionate about technology, philosophy, reading, kickboxing and weightlifting.
+												<br>
+												<br>
+													I value perseverance, a student mindset and teamwork. It's important to me that in whatever work I am given, I use all my efforts to solve the problem at hand.
+													I constantly seek to improve my knowledge and skillset through taking on new opportunities and study. I am fascinated by problem-solving and enjoy the process of 
+													finding the best solution.
 												</p>
 											</div>
 											<div class="col-4 col-6-medium col-12-small">
@@ -123,6 +131,7 @@
 													<li>Java Spring Boot</li>
 													<li>Working in a scrum team and hosting scrum ceremonies</li>
 													<li>Creating detailed high-level and low-level documentation</li>
+													<li>Python scripting for data transformation</li>	
 												</ul>
 											</p>
 											</div>
